<resources>
    <string name="app_name">Spectrum</string>

    <string name="apply">Apply</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>

    <string name="action_play">Play</string>
    <string name="action_pause">Pause</string>
    <string name="action_open">Open IQ file</string>
    <string name="action_record">Record IQ samples</string>
    <string name="action_toggle_analyzer_input">Toggle analyzer input</string>
    <string name="action_recorder_settings">IQ recorder settings</string>

    <string name="source">Source</string>
    <string name="menu_source_tone_generator">Tone generator</string>
    <string name="menu_source_tone_generator_settings">Tone generator settings</string>
    <string name="menu_source_iq_file">IQ file</string>
    <string name="menu_source_iq_file_settings">IQ file settings</string>
    <string name="menu_source_bladerf">bladeRF 2.0</string>
    <string name="menu_source_bladerf_settings">bladeRF 2.0 settings</string>
    <string name="menu_source_rtlsdr">RTL-SDR</string>
    <string name="menu_source_rtlsdr_settings">RTL-SDR settings</string>

    <string name="frequency">Frequency</string>
    <string name="set_frequency">Set frequency</string>
    <string name="menu_set_frequency">Set frequency…</string>
    <string name="frequency_out_of_range">Frequency out of range.\nValid range is %d Hz to %d Hz.</string>

    <string name="menu_sample_rate">Sample rate</string>
    <string name="menu_sr_1M">1.00 Msps</string>
    <string name="menu_sr_1_024M">1.024 Msps</string>
    <string name="menu_sr_1_536M">1.536 Msps</string>
    <string name="menu_sr_2M">2.00 Msps</string>
    <string name="menu_sr_2_048M">2.048 Msps</string>
    <string name="menu_sr_2_40M">2.40 Msps</string>
    <string name="menu_sr_2_88M">2.88 Msps</string>
    <string name="menu_sr_3_20M">3.20 Msps</string>
    <string name="menu_sr_5M">5.00 Msps</string>
    <string name="menu_sr_10M">10.00 Msps</string>
    <string name="menu_sr_10_24M">10.24 Msps</string>
    <string name="menu_sr_20M">20.00 Msps</string>
    <string name="menu_sr_20_48M">20.48 Msps</string>
    <string name="menu_sr_30M">30.00 Msps</string>
    <string name="menu_sr_30_72M">30.72 Msps</string>
    <string name="menu_sr_40M">40.00 Msps</string>
    <string name="menu_sr_40_96M">40.96 Msps</string>
    <string name="menu_sr_61_44M">61.44 Msps</string>

    <string name="menu_toggle_agc">AGC</string>

    <string name="menu_sample_type">Sample type</string>
    <string name="menu_sample_type_auto">From file name</string>
    <string name="menu_sample_type_s8">8-bit signed</string>
    <string name="menu_sample_type_u8">8-bit unsigned</string>
    <string name="menu_sample_type_s12p">12-bit signed padded</string>
    <string name="menu_sample_type_f32">32-bit float</string>

    <string name="menu_demodulator">Demodulator</string>
    <string name="menu_demodulator_none">None</string>
    <string name="menu_demodulator_am">AM</string>
    <string name="menu_demodulator_am_settings">AM settings</string>
    <string name="menu_demodulator_fm">FM</string>
    <string name="menu_demodulator_fm_settings">FM settings</string>
    <string name="menu_demodulator_wfm">Wideband FM</string>
    <string name="menu_demodulator_wfm_settings">Wideband FM settings</string>
    <string name="menu_demodulator_tetra">Tetra</string>
    <string name="menu_demodulator_gpu_offload">GPU offload</string>
    <string name="menu_demodulator_gpu_offload_none">None</string>
    <string name="menu_demodulator_gpu_offload_gles">GLES 3.2</string>
    <string name="menu_demodulator_gpu_offload_vulkan">Vulkan</string>
    <string name="menu_demodulator_audio_output">Audio output</string>
    <string name="menu_demodulator_stereo">Stereo</string>
    <string name="menu_demodulator_rds">RDS</string>

    <string name="menu_fft">FFT</string>
    <string name="menu_fft_size">FFT size</string>
    <string name="menu_fft_window">FFT window</string>
    <string name="menu_fft_256">256</string>
    <string name="menu_fft_512">512</string>
    <string name="menu_fft_1024">1024</string>
    <string name="menu_fft_2048">2048</string>
    <string name="menu_fft_4096">4096</string>
    <string name="menu_fft_8192">8192</string>
    <string name="menu_fft_16384">16384</string>
    <string name="menu_fft_flat_top">Flat-top</string>
    <string name="menu_fft_blackman_harris">Blackman-Harris</string>
    <string name="menu_fft_hamming">Hamming</string>

    <string name="menu_peak_hold">Peak hold</string>

    <string name="menu_peak_hold_decay">Peak hold decay</string>
    <string name="menu_peak_hold_decay_10">10</string>
    <string name="menu_peak_hold_decay_20">20</string>
    <string name="menu_peak_hold_decay_30">30</string>
    <string name="menu_peak_hold_decay_40">40</string>
    <string name="menu_peak_hold_decay_50">50</string>
    <string name="menu_peak_hold_decay_60">60</string>
    <string name="menu_peak_hold_decay_70">70</string>
    <string name="menu_peak_hold_decay_80">80</string>
    <string name="menu_peak_hold_decay_90">90</string>
    <string name="menu_peak_hold_decay_100">100</string>

    <string name="menu_peak_indicator">Peak indicator</string>

    <string name="menu_wf">Waterfall</string>
    <string name="menu_wf_speed">Waterfall speed</string>
    <string name="menu_wf_speed_1x">1x</string>
    <string name="menu_wf_speed_2x">2x</string>
    <string name="menu_wf_speed_4x">4x</string>

    <string name="menu_wf_colormap">Waterfall color map</string>
    <string name="menu_wf_colormap_classic">Classic</string>
    <string name="menu_wf_colormap_classic_green">Classic Green</string>
    <string name="menu_wf_colormap_gqrx">GQRX</string>
    <string name="menu_wf_colormap_vivid">Vivid</string>

    <string name="frequency_step">Frequency step</string>
    <string name="menu_fstep_1">1 Hz</string>
    <string name="menu_fstep_10">10 Hz</string>
    <string name="menu_fstep_100">100 Hz</string>
    <string name="menu_fstep_1000">1 kHz</string>
    <string name="menu_fstep_10000">10 kHz</string>
    <string name="menu_fstep_100000">100 kHz</string>

    <string name="fps_limit">FPS limit</string>
    <string name="menu_fps_10">10 FPS</string>
    <string name="menu_fps_20">20 FPS</string>
    <string name="menu_fps_30">30 FPS</string>
    <string name="menu_fps_60">60 FPS</string>
    <string name="menu_fps_120">120 FPS</string>
    <string name="menu_fps_unlimited">Unlimited</string>

    <string name="recorder_settings">Recorder settings</string>
    <string name="choose_location">Choose location</string>
    <string name="size_limit">Size limit</string>
    <string name="megabytes">%d MB</string>
</resources>