<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_playpause"
        android:icon="@drawable/ic_play"
        android:orderInCategory="1"
        android:title="@string/action_play"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_open"
        android:icon="@drawable/ic_open"
        android:orderInCategory="2"
        android:title="@string/action_open"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_record"
        android:icon="@drawable/ic_record_off"
        android:orderInCategory="3"
        android:title="@string/action_record"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_toggle_analyzer_input"
        android:icon="@android:drawable/ic_menu_zoom"
        android:orderInCategory="4"
        android:title="@string/action_toggle_analyzer_input"
        app:showAsAction="always" />
    <group
        android:id="@+id/source_group"
        android:orderInCategory="11">
        <item
            android:id="@+id/menu_source"
            android:title="@string/source">
            <menu>
                <group
                    android:id="@+id/menu_source_type_group"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_source_tone_generator"
                        android:title="@string/menu_source_tone_generator" />
                    <item
                        android:id="@+id/menu_source_iq_file"
                        android:title="@string/menu_source_iq_file" />
                    <item
                        android:id="@+id/menu_source_bladerf"
                        android:title="@string/menu_source_bladerf" />
                    <item
                        android:id="@+id/menu_source_rtlsdr"
                        android:title="@string/menu_source_rtlsdr" />
                </group>
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/demodulator_group"
        android:orderInCategory="21">
        <item
            android:id="@+id/menu_demodulator"
            android:title="@string/menu_demodulator">
            <menu>
                <group
                    android:id="@+id/menu_demodulator_group"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_demodulator_none"
                        android:title="@string/menu_demodulator_none" />
                    <item
                        android:id="@+id/menu_demodulator_am"
                        android:title="@string/menu_demodulator_am" />
                    <item
                        android:id="@+id/menu_demodulator_fm"
                        android:title="@string/menu_demodulator_fm" />
                    <item
                        android:id="@+id/menu_demodulator_wfm"
                        android:title="@string/menu_demodulator_wfm" />
                    <item
                        android:id="@+id/menu_demodulator_tetra"
                        android:title="@string/menu_demodulator_tetra" />
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/menu_demodulator_gpu_offload"
            android:title="@string/menu_demodulator_gpu_offload">
            <menu>
                <group
                    android:id="@+id/menu_demodulator_gpu_offload_group"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_demodulator_gpu_offload_none"
                        android:title="@string/menu_demodulator_gpu_offload_none" />
                    <item
                        android:id="@+id/menu_demodulator_gpu_offload_gles"
                        android:title="@string/menu_demodulator_gpu_offload_gles" />
                    <item
                        android:id="@+id/menu_demodulator_gpu_offload_vulkan"
                        android:title="@string/menu_demodulator_gpu_offload_vulkan" />
                </group>
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/settings_group"
        android:orderInCategory="31">
        <item
            android:title="@string/menu_fft"
            app:showAsAction="never">
            <menu>
                <item
                    android:enabled="false"
                    android:title="@string/menu_fft_size" />
                <group
                    android:id="@+id/menu_fft_size_group"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_fft_256"
                        android:title="@string/menu_fft_256" />
                    <item
                        android:id="@+id/menu_fft_512"
                        android:title="@string/menu_fft_512" />
                    <item
                        android:id="@+id/menu_fft_1024"
                        android:title="@string/menu_fft_1024" />
                    <item
                        android:id="@+id/menu_fft_2048"
                        android:title="@string/menu_fft_2048" />
                    <item
                        android:id="@+id/menu_fft_4096"
                        android:title="@string/menu_fft_4096" />
                    <item
                        android:id="@+id/menu_fft_8192"
                        android:title="@string/menu_fft_8192" />
                    <item
                        android:id="@+id/menu_fft_16384"
                        android:title="@string/menu_fft_16384" />
                </group>
                <item
                    android:enabled="false"
                    android:title="@string/menu_fft_window" />
                <group
                    android:id="@+id/menu_fft_window_group"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_fft_flat_top"
                        android:title="@string/menu_fft_flat_top" />
                    <item
                        android:id="@+id/menu_fft_blackman_harris"
                        android:title="@string/menu_fft_blackman_harris" />
                    <item
                        android:id="@+id/menu_fft_hamming"
                        android:title="@string/menu_fft_hamming" />
                </group>
            </menu>
        </item>
        <item
            android:title="@string/menu_peak_hold"
            app:showAsAction="never">
            <menu>
                <group
                    android:id="@+id/menu_peak_hold_group"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_peak_hold"
                        android:checkable="true"
                        android:title="@string/menu_peak_hold" />
                    <item
                        android:id="@+id/menu_peak_indicator"
                        android:checkable="true"
                        android:title="@string/menu_peak_indicator" />
                </group>
                <item
                    android:enabled="false"
                    android:title="@string/menu_peak_hold_decay" />
                <group
                    android:id="@+id/menu_peak_hold_decay_group"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_peak_hold_decay_10"
                        android:title="@string/menu_peak_hold_decay_10" />
                    <item
                        android:id="@+id/menu_peak_hold_decay_20"
                        android:title="@string/menu_peak_hold_decay_20" />
                    <item
                        android:id="@+id/menu_peak_hold_decay_30"
                        android:title="@string/menu_peak_hold_decay_30" />
                    <item
                        android:id="@+id/menu_peak_hold_decay_40"
                        android:title="@string/menu_peak_hold_decay_40" />
                    <item
                        android:id="@+id/menu_peak_hold_decay_50"
                        android:title="@string/menu_peak_hold_decay_50" />
                    <item
                        android:id="@+id/menu_peak_hold_decay_60"
                        android:title="@string/menu_peak_hold_decay_60" />
                    <item
                        android:id="@+id/menu_peak_hold_decay_70"
                        android:title="@string/menu_peak_hold_decay_70" />
                    <item
                        android:id="@+id/menu_peak_hold_decay_80"
                        android:title="@string/menu_peak_hold_decay_80" />
                    <item
                        android:id="@+id/menu_peak_hold_decay_90"
                        android:title="@string/menu_peak_hold_decay_90" />
                    <item
                        android:id="@+id/menu_peak_hold_decay_100"
                        android:title="@string/menu_peak_hold_decay_100" />
                </group>
            </menu>
        </item>
        <item
            android:title="@string/menu_wf"
            app:showAsAction="never">
            <menu>
                <item
                    android:enabled="false"
                    android:title="@string/menu_wf_speed" />
                <group
                    android:id="@+id/menu_wf_speed_group"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_wf_speed_1x"
                        android:title="@string/menu_wf_speed_1x" />
                    <item
                        android:id="@+id/menu_wf_speed_2x"
                        android:title="@string/menu_wf_speed_2x" />
                    <item
                        android:id="@+id/menu_wf_speed_4x"
                        android:title="@string/menu_wf_speed_4x" />
                </group>
                <item
                    android:enabled="false"
                    android:title="@string/menu_wf_colormap" />
                <group
                    android:id="@+id/menu_wf_colormap_group"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_wf_colormap_classic"
                        android:title="@string/menu_wf_colormap_classic" />
                    <item
                        android:id="@+id/menu_wf_colormap_classic_green"
                        android:title="@string/menu_wf_colormap_classic_green" />
                    <item
                        android:id="@+id/menu_wf_colormap_gqrx"
                        android:title="@string/menu_wf_colormap_gqrx" />
                    <item
                        android:id="@+id/menu_wf_colormap_vivid"
                        android:title="@string/menu_wf_colormap_vivid" />
                </group>
            </menu>
        </item>
        <item
            android:title="@string/frequency_step"
            app:showAsAction="never">
            <menu>
                <group
                    android:id="@+id/menu_frequency_step_group"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_fstep_1"
                        android:title="@string/menu_fstep_1" />
                    <item
                        android:id="@+id/menu_fstep_10"
                        android:title="@string/menu_fstep_10" />
                    <item
                        android:id="@+id/menu_fstep_100"
                        android:title="@string/menu_fstep_100" />
                    <item
                        android:id="@+id/menu_fstep_1000"
                        android:title="@string/menu_fstep_1000" />
                    <item
                        android:id="@+id/menu_fstep_10000"
                        android:title="@string/menu_fstep_10000" />
                    <item
                        android:id="@+id/menu_fstep_100000"
                        android:title="@string/menu_fstep_100000" />
                </group>
            </menu>
        </item>
        <item
            android:title="@string/fps_limit"
            app:showAsAction="never">
            <menu>
                <group
                    android:id="@+id/menu_fps_limit_group"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_fps_10"
                        android:title="@string/menu_fps_10" />
                    <item
                        android:id="@+id/menu_fps_20"
                        android:title="@string/menu_fps_20" />
                    <item
                        android:id="@+id/menu_fps_30"
                        android:title="@string/menu_fps_30" />
                    <item
                        android:id="@+id/menu_fps_60"
                        android:title="@string/menu_fps_60" />
                    <item
                        android:id="@+id/menu_fps_120"
                        android:title="@string/menu_fps_120" />
                    <item
                        android:id="@+id/menu_fps_unlimited"
                        android:title="@string/menu_fps_unlimited" />
                </group>
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/recorder_settings_group"
        android:orderInCategory="32">
        <item
            android:id="@+id/menu_recorder_settings"
            android:title="@string/action_recorder_settings"
            app:showAsAction="never" />
    </group>
</menu>