<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:enabled="false"
        android:title="@string/menu_source_iq_file_settings" />
    <group android:id="@+id/source_group">
        <item android:title="@string/menu_sample_type">
            <menu>
                <group
                    android:id="@+id/menu_sample_type_group"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_sample_type_none"
                        android:title="@string/menu_sample_type_auto" />
                    <item
                        android:id="@+id/menu_sample_type_s8"
                        android:title="@string/menu_sample_type_s8" />
                    <item
                        android:id="@+id/menu_sample_type_u8"
                        android:title="@string/menu_sample_type_u8" />
                    <item
                        android:id="@+id/menu_sample_type_s12p"
                        android:title="@string/menu_sample_type_s12p" />
                    <item
                        android:id="@+id/menu_sample_type_f32"
                        android:title="@string/menu_sample_type_f32" />
                </group>
            </menu>
        </item>
    </group>
</menu>
