<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:enabled="false"
        android:title="@string/menu_demodulator_wfm_settings" />
    <group android:id="@+id/menu_demodulator_settings_group">
        <item
            android:id="@+id/menu_demodulator_audio_output"
            android:checkable="true"
            android:title="@string/menu_demodulator_audio_output" />
        <item
            android:id="@+id/menu_demodulator_stereo"
            android:checkable="true"
            android:title="@string/menu_demodulator_stereo" />
        <item
            android:id="@+id/menu_demodulator_rds"
            android:checkable="true"
            android:title="@string/menu_demodulator_rds" />
    </group>
</menu>
