<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/demodulator_group"
        android:orderInCategory="21">
        <item android:title="@string/menu_demodulator">
            <menu>
                <group
                    android:id="@+id/menu_demodulator_group"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_demodulator_none"
                        android:title="@string/menu_demodulator_none" />
                    <item
                        android:id="@+id/menu_demodulator_wfm"
                        android:title="@string/menu_demodulator_wfm" />
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/menu_demodulator_toggle_audio_output"
            android:checkable="true"
            android:title="@string/menu_demodulator_toggle_audio_output" />
    </group>
</menu>
